[CSS] Fix layout shift on input focus #25

--- a/src/css/app-shell.css
+++ b/src/css/app-shell.css
@@ -53,9 +53,16 @@ footer {
     grid-template-columns: 1fr auto;
     font-size: 1.6rem;
     align-items: center;
+    box-sizing: border-box;
+    text-align: right;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0);
+    transition-duration: 200ms;
+    transition-property: border-bottom-color, border-top-color, border-right-color, border-left-color;
 }
 .currency:focus-within {
-    border: 1px solid #0331d2;
+    border: 1px solid rgba(3, 49, 210, 100);
 }
 .currency input {
     all: unset;
